2010-05-10  Alan McGovern  <amcgovern@novell.com>

	* TextElement.cs: Move the Expression handling code from
	  FrameworkElement to DependencyObject so that we can support
	  the new SL4 databinding capabilities.

2010-04-27  Alan McGovern  <amcgovern@novell.com>

	* Inline.cs: Put TextDecorationsProperty back on TextElement
	  to stop the DRTs from breaking.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* TextPointer.cs:
	* LogicalDirection.cs: Add a missing enum and a missing class.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* Section.cs: Remove publicly callable setters where there
	  should be none.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* Section.cs: Stub out the missing 'Section' class.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* Inline.cs: The block ctor should be protected and the
	  TextDecorations property should be declared on Inline, not
	  TextElement

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* Inline.cs: Mark these DPs as readonly.

2010-04-20  Alan McGovern  <amcgovern@novell.com>

	* Inline.cs:
	* TextElement.cs: Inline redeclares DPs which are defined on
	  TextElement, so mark the ones on Inline as 'new' to remove
	  compiler warnings.

2010-04-12  Alan McGovern  <amcgovern@novell.com>

	* Inline.cs: These DPs need to be re-exposed in Inline even
	  though they are actually declared on TextElement. 

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Block.cs:
	* BlockCollection.cs:
	* Bold.cs:
	* Hyperlink.cs:
	* InlineUIContainer.cs:
	* Italic.cs:
	* Paragraph.cs:
	* Span.cs:
	* TextElement.cs:
	* TextElementCollection.cs:
	* TextSelection.cs:
	* Underline.cs:
	* Inline.cs: 
	* InlineCollection.cs: Update to SL4 beta API.

2009-12-04  Alan McGovern  <amcgovern@novell.com>

	* Inline.cs: Don't bother storing a copy of the Name property
	  locally - just use FrameworkElement.NameProperty.

2009-04-09  Jeffrey Stedfast  <fejj@novell.com>
